custom to production

--- a/app/views/factory/admin/productions/_show_table.html.erb
+++ b/app/views/factory/admin/productions/_show_table.html.erb
@@ -1,12 +1,12 @@
 <tr>
-  <td class="has-text-right"><%= Custom.human_attribute_name(:name) %></td>
-  <td><%= @custom.name %></td>
+  <td class="has-text-right"><%= Production.human_attribute_name(:name) %></td>
+  <td><%= @production.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Custom.human_attribute_name(:state) %></td>
-  <td><%= @custom.state_i18n %></td>
+  <td class="has-text-right"><%= Production.human_attribute_name(:state) %></td>
+  <td><%= @production.state_i18n %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Custom.human_attribute_name(:qr_code) %></td>
-  <td><%= @custom.qr_code %></td>
+  <td class="has-text-right"><%= Production.human_attribute_name(:qr_code) %></td>
+  <td><%= @production.qr_code %></td>
 </tr>
