--- a/app/views/factory/admin/productions/index.html.erb
+++ b/app/views/factory/admin/productions/index.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'index_table', locals: { cache_key: Custom.column_names.hash } do %>
-  <%= render partial: 'index_tbody', collection: @customs, as: :custom %>
+<%= render layout: 'index_table', locals: { cache_key: Production.column_names.hash } do %>
+  <%= render partial: 'index_tbody', collection: @productions, as: :production %>
 <% end %>
