--- a/app/views/factory/admin/productions/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index_thead.html.erb
@@ -8,4 +8,5 @@
 </th>
 <th></th>
 <th><%= Production.human_attribute_name(:parts) %></th>
+<th><%= Production.human_attribute_name(:default) %></th>
 <th></th>
