--- a/app/views/factory/productions/_figure.html.erb
+++ b/app/views/factory/productions/_figure.html.erb
@@ -4,5 +4,5 @@
   <% else %>
     <%= image_tag cover %>
   <% end %>
-  <figcaption><%= index + 1 %>/<%= @product.covers.count %></figcaption>
+  <figcaption><%= index + 1 %>/<%= @production.product.covers.count %></figcaption>
 </figure>
