--- a/app/views/factory/productions/_show.html.erb
+++ b/app/views/factory/productions/_show.html.erb
@@ -1,33 +1,33 @@
 <div class="slide" data-controller="slide">
-  <% @product.covers.each_with_index do |cover, index| %>
+  <% @production.product.covers.each_with_index do |cover, index| %>
     <%= render partial: 'figure', locals: { cover: cover, index: index } %>
   <% end %>
 </div>
 
 <div class="box" data-controller="sticky" style="z-index: 3;">
   <div class="has-text-danger has-text-bold">
-    <span><%= @custom.price.to_money.symbol %></span>
-    <span id="total_price"><%= @custom.price.to_money.to_s %></span>
+    <span><%= @production.price.to_money.symbol %></span>
+    <span id="total_price"><%= @production.price.to_money.to_s %></span>
   </div>
 </div>
 
 <div class="box">
-  <h1><%= @product.name %></h1>
+  <h1><%= @production.name %></h1>
 </div>
 
 <div>
-<% @product.part_taxons.each do |part_taxon| %>
+<% @production.product.part_taxons.each do |part_taxon| %>
   <div class="weui-media-box weui-media-box_text">
     <div class="weui-media-box__title">
       <span><%= part_taxon.name %></span>
       <span class="weui-panel__extra">选择范围：<%= part_taxon.min_select %> - <%= part_taxon.max_select %></span>
     </div>
-    <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
+    <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@production.part_ids & part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
       <% part_taxon.parts.each do |part| %>
-        <label class="weui-btn weui-btn_mini <%= @custom.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
+        <label class="weui-btn weui-btn_mini <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
           <span><%= part.name %></span>
           <span class="weui-btn__extra"><%= part.price %></span>
-          <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { action: 'custom#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+          <%= check_box_tag 'custom[part_ids][]', part.id, @production.part_ids.include?(part.id), data: { action: 'custom#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
         </label>
       <% end %>
     </div>
