--- a/app/views/factory/admin/trade_items/_breadcrumb.html.erb
+++ b/app/views/factory/admin/trade_items/_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.admin.customs.index.title'), { controller: 'customs' } %></li>
+    <li><%= link_to t('factory.admin.productions.index.title'), { controller: 'productions' } %></li>
     <li class="is-active"><%= t('factory.admin.trade_items.index.title') %></li>
   </ul>
 </div>
