--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -11,16 +11,19 @@
     <table class="table is-borderless">
       <% product.parts.each do |part| %>
         <tr>
-          <td><span><%= link_to part.name, admin_part_path(part), remote: true %></span></td>
+          <td><span class="tag"><%= link_to part.name, { controller: 'parts', action: 'show', id: part.id }, remote: true %></span></td>
           <td><%= part.price %></td>
         </tr>
       <% end %>
     </table>
   </td>
   <td>
-    <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: product.id }, class: 'button is-small is-success' %>
+    <%= link_to({ action: 'part', id: product.id }, aria: { label: t('factory.admin.products.part.title') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+      <i class="fas fa-cube"></i>
+    <% end %>
   </td>
   <td>
+    <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: product.id }, class: 'button is-small is-success' %>
     <%= link_to({ controller: 'productions', product_id: product.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-cube"></i>
     <% end %>
