--- a/app/views/factory/admin/part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index_tbody.html.erb
@@ -1,11 +1,13 @@
 <tr data-depth="<%= part_taxon.depth_str %>">
   <td>
-    <span><%= ('&emsp;' * part_taxon.depth * 2).html_safe %></span>
-    <i class="grey caret down icon link"></i>
+    <span style="width: <%= part_taxon.depth * 1.43 %>em; display: inline-block"></span>
+    <% if !part_taxon.leaf? %>
+      <i class="fas fa-caret-down fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
+    <% else %>
+      <i class="fas fa-minus fa-fw"></i>
+    <% end %>
     <span><%= part_taxon.name %></span>
   </td>
-  <td><%= part_taxon.min_select %></td>
-  <td><%= part_taxon.max_select %></td>
   <td>
     <%= link_to({ action: 'edit', id: part_taxon.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-pencil-alt"></i>
