--- a/app/views/factory/admin/part_taxons/_form.html.erb
+++ b/app/views/factory/admin/part_taxons/_form.html.erb
@@ -1,5 +1,3 @@
 <%= render 'shared/error_messages', target: f.object %>
 <%= f.text_field :name %>
-<%= render partial: 'com/nodes/children_select', locals: { f: f, node: PartTaxon.new } %>
-<%= f.number_field :min_select %>
-<%= f.number_field :max_select %>
+<%= render partial: 'com/nodes/children_select', locals: { f: f, node: PartTaxon.root } %>
