--- a/app/views/factory/admin/products/_part_form.html.erb
+++ b/app/views/factory/admin/products/_part_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_with model: @product, url: { action: 'update' } do |f| %>
   <%= render 'shared/error_messages', target: @product %>
-  <%= f.collection_select :part_ids, @parts, :id, :name, { wrap: { select: 'field-body control' } }, { multiple: true, data: { controller: 'choice' } } %>
+  <% @product.part_taxons.each do |part_taxon| %>
+    <%= f.collection_check_boxes :part_ids, part_taxon.parts, :id, :name %>
+  <% end %>
   <%= f.submit %>
 <% end %>
