--- a/app/views/factory/productions/_show.html.erb
+++ b/app/views/factory/productions/_show.html.erb
@@ -16,14 +16,14 @@
 </div>
 
 <div>
-<% @production.product.part_taxons.each do |part_taxon| %>
+<% @production.product_part_taxons.each do |product_part_taxon| %>
   <div class="weui-media-box weui-media-box_text">
     <div class="weui-media-box__title">
-      <span><%= part_taxon.name %></span>
-      <span class="weui-panel__extra">选择范围：<%= part_taxon.min_select %> - <%= part_taxon.max_select %></span>
+      <span><%= product_part_taxon.part_taxon.name %></span>
+      <span class="weui-panel__extra">选择范围：<%= product_part_taxon.min_select %> - <%= product_part_taxon.max_select %></span>
     </div>
     <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@production.part_ids & part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
-      <% part_taxon.parts.each do |part| %>
+      <% product_part_taxon.parts.each do |part| %>
         <label class="weui-btn weui-btn_mini <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
           <span><%= part.name %></span>
           <span class="weui-btn__extra"><%= part.price %></span>
