--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -1,5 +1,5 @@
-<%= form_with scope: :custom, url: { controller: 'factory/my/productions', action: 'create' }, id: 'edit_custom' do |f| %>
-  <%= f.hidden_field :product_id, value: @production.product_id %>
+<%= form_with model: @production, url: { controller: 'factory/my/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
+  <%= f.hidden_field :product_id %>
   <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
 <% end %>
 
