--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -1,5 +1,5 @@
 <div class="slide" data-controller="slide">
-  <% @production.product.covers.each_with_index do |cover, index| %>
+  <% @product.covers.each_with_index do |cover, index| %>
     <%= render partial: 'figure', locals: { cover: cover, index: index } %>
   <% end %>
 </div>
@@ -12,11 +12,11 @@
 </div>
 
 <div class="box">
-  <h1><%= @production.name %></h1>
+  <h1><%= @product.name %></h1>
 </div>
 
 <div>
-<% @production.product.product_part_taxons.each do |product_part_taxon| %>
+<% @product.product_part_taxons.each do |product_part_taxon| %>
   <div class="weui-media-box weui-media-box_text">
     <div class="weui-media-box__title">
       <span><%= product_part_taxon.part_taxon.name %></span>
