--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -8,23 +8,23 @@
   </div>
   <div class="weui-panel__bd">
     <%= render 'filter_form' %>
-  <% @productions.each do |production| %>
-    <%= link_to({ action: 'show', id: production.id }, class: 'weui-media-box weui-media-box_appmsg') do %>
+  <% @products.each do |product| %>
+    <%= link_to({ action: 'show', id: product.id }, class: 'weui-media-box weui-media-box_appmsg') do %>
       <div class="weui-media-box__hd">
-        <%= image_tag production.logo, class: 'weui-media-box__thumb' if production.logo.attached? %>
+        <%= image_tag product.logo, class: 'weui-media-box__thumb' if product.logo.attached? %>
       </div>
       <div class="weui-media-box__bd">
-        <h4 class="weui-media-box__title"><%= production.name %></h4>
+        <h4 class="weui-media-box__title"><%= product.name %></h4>
         <p class="weui-media-box__desc">
-          <%= production.product.description %>
+          <%= product.description %>
         </p>
         <ul class="weui-media-box__info">
-          <% production.parts.group_by(&->(i){ i.part_taxon_id }).each do |_, parts| %>
+          <% product.parts.group_by(&->(i){ i.part_taxon_id }).each do |_, parts| %>
             <% parts.each_with_index do |part, index| %>
               <li class="weui-media-box__info__meta<%= index == 0 ? ' weui-media-box__info__meta_extra' : '' %>"><%= part.name %></li>
             <% end %>
           <% end %>
-          <li style="float: right"><%= production.price.to_money.format %></li>
+          <li style="float: right"><%= product.min_price.to_money.format %></li>
         </ul>
       </div>
     <% end %>
