get production with custom

--- a/app/views/factory/my/productions/create_price.js.erb
+++ b/app/views/factory/my/productions/create_price.js.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'visit', locals: { return_to: product_url(params[:product_id]) } %>
+<%= render partial: 'visit', locals: { return_to: product_url(@production.product_id) } %>
