--- a/app/views/factory/my/productions/_filter_form.html.erb
+++ b/app/views/factory/my/productions/_filter_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with theme: 'search' do |f| %>
   <div class="fields">
-    <%= f.submit 'Search' %>
+    <%= f.submit %>
   </div>
 <% end %>
 
