--- a/app/views/factory/admin/productions/_form.html.erb
+++ b/app/views/factory/admin/productions/_form.html.erb
@@ -1,3 +1,4 @@
 <%= render 'shared/error_messages', target: f.object %>
 <%= f.text_field :name %>
 <%= f.text_field :qr_code %>
+<%= f.file_field :logo %>
