--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </td>
   <td>
-    <table class="table is-fullwidth">
+    <table class="table is-fullwidth is-borderless">
       <% production.parts.each do |part| %>
         <tr>
           <td><span class="tag"><%= link_to part.name, admin_part_path(part) %></span></td>
