--- a/app/views/factory/admin/product_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index_tbody.html.erb
@@ -2,7 +2,7 @@
   <td><%= product_taxon.name %></td>
   <td><%= image_tag product_taxon.logo, class: 'image is-32x32' if product_taxon.logo.attached? %></td>
   <td>
-    <%= link_to({ action: 'show', id: product_taxon.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'show', id: product_taxon.id }, aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-eye"></i>
     <% end %>
     <%= link_to({ action: 'edit', id: product_taxon.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
