--- a/app/views/factory/admin/parts/_index_tbody.html.erb
+++ b/app/views/factory/admin/parts/_index_tbody.html.erb
@@ -12,7 +12,7 @@
   </td>
   <td>
     <%= link_to '供应商管理', admin_good_providers_path('Part', part), class: 'button is-small is-rounded is-light' %>
-    <%= link_to({ action: 'show', id: part.id }, class: 'button is-small is-rounded is-light') do %>
+    <%= link_to({ action: 'show', id: part.id }, remote: true, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-info"></i>
     <% end %>
     <%= link_to({ action: 'edit', id: part.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
