--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -1,11 +1,11 @@
 <div class="<%= active_helper(modules: 'factory/panel', active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>" data-controller="menu">
   <%= content_tag :div, class: 'menu-list' do %>
-    <%= link_to t('factory.admin.products.index.title'), { controller: 'factory/panel/part_taxon_templates' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_plans', 'product_items'], active: 'is-active') %>
-    <%= link_to t('factory.admin.produce_plans.index.title'), { controller: 'factory/panel/product_taxon_templates' }, class: active_helper(controllers: ['produce_plans'], active: 'is-active') -%>
+    <%= link_to t('factory.panel.part_taxon_templates.index.title'), { controller: 'factory/panel/part_taxon_templates' }, class: active_helper(controllers: ['part_taxon_templates'], active: 'is-active') %>
+    <%= link_to t('factory.panel.product_taxon_templates.index.title'), { controller: 'factory/panel/product_taxon_templates' }, class: active_helper(controllers: ['product_taxon_templates'], active: 'is-active') -%>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
     <i class="fas fa-users fa-fw"></i>
-    <span><%= t('factory.admin.title') %></span>
+    <span><%= t('factory.panel.title') %></span>
     <i class="fas dropdown"></i>
   </a>
 </div>
