--- a/app/views/factory/panel/providers/search.js.erb
+++ b/app/views/factory/panel/providers/search.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('user_content').innerHTML = '<%= j(render partial: 'form_serach') %>'
+document.getElementById('user_content').innerHTML = '<%= j(render partial: 'form_search') %>'
