--- a/app/views/factory/panel/providers/_index_tbody.html.erb
+++ b/app/views/factory/panel/providers/_index_tbody.html.erb
@@ -1,12 +1,7 @@
 <tr>
+  <td><%= part_taxon_provider.provider.name %></td>
   <td>
-    <%= link_to({ action: 'show', id: provider.id }, { aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-eye"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: provider.id }, { aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
-      <i class="fas fa-pencil-alt"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: provider.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
+    <%= link_to({ action: 'destroy', id: part_taxon_provider.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
