--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -1,7 +1,6 @@
 <div class="<%= active_helper(modules: 'factory/panel', active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>" data-controller="menu">
   <%= content_tag :div, class: 'menu-list' do %>
-    <%= link_to t('factory.panel.part_taxon_templates.index.title'), { controller: 'factory/panel/part_taxon_templates' }, class: active_helper(controllers: ['part_taxon_templates'], active: 'is-active') %>
-    <%= link_to t('factory.panel.product_taxon_templates.index.title'), { controller: 'factory/panel/product_taxon_templates' }, class: active_helper(controllers: ['product_taxon_templates'], active: 'is-active') -%>
+    <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
     <i class="fas fa-users fa-fw"></i>
