--- a/app/views/factory/panel/providers/_breadcrumb.html.erb
+++ b/app/views/factory/panel/providers/_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.panel.part_taxon_templates.index.title'), { controller: 'part_taxon_templates' } %></li>
+    <li><%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory_taxons' } %></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
