--- a/app/views/factory/panel/providers/_filter_form.html.erb
+++ b/app/views/factory/panel/providers/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: PartTaxonProvider.new do |f| %>
+<%= form_with theme: 'search', model: FactoryProvider.new do |f| %>
   <div class="field-body">
     <%= f.text_field 'provider.name' %>
     <div class="field is-narrow">
