--- a/app/views/factory/panel/providers/_index_tbody.html.erb
+++ b/app/views/factory/panel/providers/_index_tbody.html.erb
@@ -1,7 +1,7 @@
 <tr>
-  <td><%= part_taxon_provider.provider.name %></td>
+  <td><%= factory_provider.provider.name %></td>
   <td>
-    <%= link_to({ action: 'destroy', id: part_taxon_provider.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
+    <%= link_to({ action: 'destroy', id: factory_provider.id }, { method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' }) do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
   </td>
