--- a/app/views/factory/admin/product_taxons/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_index_thead.html.erb
@@ -1,3 +1,4 @@
 <th><%= ProductTaxon.human_attribute_name(:name) %></th>
 <th><%= ProductTaxon.human_attribute_name(:logo) %></th>
+<th><%= ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
 <th></th>
