--- a/app/views/factory/admin/product_part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index_tbody.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= product_part_taxon.name %></td>
+  <td><%= product_part_taxon.part_taxon.name %></td>
   <td><%= product_part_taxon.min_select %></td>
   <td><%= product_part_taxon.max_select %></td>
   <td>
