--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -8,6 +8,9 @@
   <td><%= product.qr_prefix %></td>
   <td><%= product.profit_margin.to_s(:percentage) %></td>
   <td>
+    <%= link_to({ controller: 'product_part_taxons', product_id: product.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
+      <i class="fas fa-cube"></i>
+    <% end %>
     <%= link_to({ controller: 'product_parts', product_id: product.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-cube"></i>
     <% end %>
