--- a/app/views/factory/admin/productions/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index_thead.html.erb
@@ -1,4 +1,4 @@
-<th><%= Production.human_attribute_name(:product_name) %></th>
+<th colspan="2"><%= Production.human_attribute_name(:product_name) %></th>
 <th><%= Production.human_attribute_name(:state) %></th>
 <th><%= Production.human_attribute_name(:qr_code) %></th>
 <th class="has-text-right">
@@ -7,7 +7,6 @@
   <p><%= Production.human_attribute_name(:price) %></p>
 </th>
 <th></th>
-<th><%= Production.human_attribute_name(:parts) %></th>
 <th></th>
 <th><%= Production.human_attribute_name(:default) %></th>
 <th></th>
