--- a/app/views/factory/admin/factory_taxons/_show/_index_tbody.html.erb
+++ b/app/views/factory/admin/factory_taxons/_show/_index_tbody.html.erb
@@ -1,9 +1,8 @@
 <tr>
   <td><%= product.product_taxon&.name %></td>
-  <td><%= link_to product.name, { action: 'show', id: product.id }, text: true %></td>
-  <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.logo.attached? %></td>
   <td>
-    <%= render 'com/attachments/list', target: product.covers %>
+    <%= image_tag product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if product.logo.attached? %>
+    <%= link_to product.name, { action: 'show', id: product.id }, text: true %>
   </td>
   <td><%= product.qr_prefix %></td>
   <td><%= product.profit_margin.to_s(:percentage) %></td>
