--- a/app/views/factory/admin/factory_taxons/_show/_index_tbody.html.erb
+++ b/app/views/factory/admin/factory_taxons/_show/_index_tbody.html.erb
@@ -1,6 +1,9 @@
-<tr>
+<tr data-controller="tree_remote show" data-action="mouseenter->show#show mouseleave->show#hide" id="tr_<%= product.id %>">
   <td><%= product.product_taxon&.name %></td>
   <td>
+    <%= link_to({ action: 'productions', product_id: product.id }, remote: true) do %>
+      <i class="fas fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree_remote#expand"></i>
+    <% end %>
     <%= image_tag product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if product.logo.attached? %>
     <%= link_to product.name, { action: 'show', id: product.id }, text: true %>
   </td>
