--- a/app/views/factory/admin/factory_taxons/_production.html.erb
+++ b/app/views/factory/admin/factory_taxons/_production.html.erb
@@ -1,7 +1,7 @@
 <% @productions.each do |production| %>
 <tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
-  <td><%= production.product.product_taxon&.name %></td>
   <td>
+    <span style="width: 1em; display: inline-block"></span>
     <%= image_tag production.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if production.product.logo.attached? %>
     <%= link_to production.product.name, { action: 'show', id: production.product_id }, text: true %>
   </td>
