import part from factory taoxn show page

--- a/app/views/factory/admin/factory_taxons/_show/_index_tbody.html.erb
+++ b/app/views/factory/admin/factory_taxons/_show/_index_tbody.html.erb
@@ -42,3 +42,6 @@
     <% end %>
   </td>
 </tr>
+<% if params[:product_id] == product.id.to_s %>
+  <%= render partial: 'production', collection: product.productions, as: :production %>
+<% end %>
