--- a/app/views/factory/admin/factory_taxons/productions.js.erb
+++ b/app/views/factory/admin/factory_taxons/productions.js.erb
@@ -1,2 +1,2 @@
 var doc = document.getElementById('tr_<%= params[:product_id] %>')
-doc.insertAdjacentHTML('afterend', '<%= j(render 'production') %>')
+doc.insertAdjacentHTML('afterend', '<%= j(render partial: 'production', collection: @productions, as: :production) %>')
