--- a/app/views/factory/admin/factory_taxons/_production.html.erb
+++ b/app/views/factory/admin/factory_taxons/_production.html.erb
@@ -1,4 +1,3 @@
-<% @productions.each do |production| %>
 <tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
     <span style="width: 1em; display: inline-block"></span>
@@ -16,11 +15,20 @@
       <% end %>
     </table>
   </td>
-  <td colspan="2"></td>
+  <td>
+    <% if production.provided_parts.exists?(default_params) %>
+      <i class="fas fa-check has-text-success"></i>
+    <% else %>
+      <i class="fas fa-times has-text-gery"></i>
+    <% end %>
+  </td>
+  <td></td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: production.product_id, id: production.id }, aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-info"></i>
     <% end %>
+    <%= link_to({ controller: 'productions', action: 'provide', product_id: production.product_id, id: production.id }, method: :patch, remote: true, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+      <i class="fas fa-tractor"></i>
+    <% end %>
   </td>
 </tr>
-<% end %>
