--- a/app/views/factory/admin/productions/provide.js.erb
+++ b/app/views/factory/admin/productions/provide.js.erb
@@ -1,1 +1,1 @@
-<%= render 'visit', locals: { query: { product_id: params[:product_id] } } %>
+<%= render 'visit', locals: { query: { product_id: @production.product_id } } %>
