--- a/app/views/factory/admin/part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index_tbody.html.erb
@@ -8,7 +8,12 @@
     <% end %>
     <span><%= part_taxon.name %></span>
   </td>
-  <td><%= link_to part_taxon.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: part_taxon.factory_taxon_id }, text: true if part_taxon.factory_taxon %></td>
+  <td>
+    <% if part_taxon.factory_taxon %>
+      <%= link_to part_taxon.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: part_taxon.factory_taxon_id }, remote: true %>
+      <%= link_to '进货', { action: 'import', id: part_taxon.id } %>
+  <% end %>
+  </td>
   <td>
     <%= link_to({ action: 'edit', id: part_taxon.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-pencil-alt"></i>
