--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -43,6 +43,9 @@
     <%= link_to({ controller: 'trade_items', production_id: production.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-shopping-cart"></i>
     <% end %>
+    <%= link_to({ controller: 'provideds', production_id: production.id }, aria: { label: t('factory.admin.provideds.index.title') }, class: 'button is-small is-rounded is-light') do %>
+      <i class="fas fa-hand-holding"></i>
+    <% end %>
     <%= link_to({ controller: 'addresses', production_id: production.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-map-marker-alt"></i>
     <% end %>
