--- a/app/views/factory/admin/provideds/_index_tbody.html.erb
+++ b/app/views/factory/admin/provideds/_index_tbody.html.erb
@@ -1,5 +1,6 @@
 <tr>
-  <td><%= part_provider.provider.name %></td>
+  <td><%= part_provider.part.organ&.name %></td>
+  <td><%= part_provider.part.name %></td>
   <td><%= part_provider.export_price %></td>
   <td><time><%= part_provider.created_at.to_s(:rfc822) %></time></td>
   <td>
