--- a/app/views/factory/admin/provideds/_index_thead.html.erb
+++ b/app/views/factory/admin/provideds/_index_thead.html.erb
@@ -1,4 +1,5 @@
-<th><%= PartProvider.human_attribute_name(:provider_id) %></th>
+<th><%= PartProvider.human_attribute_name('part_id/organ_id') %></th>
+<th><%= PartProvider.human_attribute_name(:part_id) %></th>
 <th><%= PartProvider.human_attribute_name(:export_price) %></th>
 <th><%= PartProvider.human_attribute_name(:created_at) %></th>
 <th></th>
