--- a/app/views/factory/admin/produce_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_tbody.html.erb
@@ -1,8 +1,8 @@
 <tr>
   <td><%= produce_plan.title %></td>
   <td>
-    <p><time><%= produce_plan.start_at.to_s(:rfc822) %></time></p>
-    <p><time><%= produce_plan.finish_at.to_s(:rfc822) %></time></p>
+    <p data-controller="time"><%= produce_plan.start_at.to_s(:rfc822) %></p>
+    <p data-controller="time"><%= produce_plan.finish_at.to_s(:rfc822) %></p>
   </td>
   <td><%= produce_plan.state %></td>
   <td>
